Fix pane cutoff problem

--- a/src/views/stylesheets/builder/control.styl
+++ b/src/views/stylesheets/builder/control.styl
@@ -39,6 +39,10 @@
     position relative
 
   .pane-container
+    position absolute
+    top 40px
+    z-index 2
+
     &.hidden
       opacity 0
       pointer-events none
