--- a/src/views/stylesheets/builder/pane.styl
+++ b/src/views/stylesheets/builder/pane.styl
@@ -4,11 +4,7 @@
   background white
   border-radius 3px
   box-shadow 0px 3px 10px -4px black
-  left -1px
-  position absolute
-  top 40px
-  width 400px
-  z-index 2
+  width 100%
 
   .header, .footer
     line-height 36px
